gccida/c0/layout_decl
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/layout_decl/src/stor-layout.c:799:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/layout_decl/src/stor-layout.c:804:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // [rsp+10h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/layout_decl/src/stor-layout.c:805:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // [rsp+18h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/layout_decl/src/stor-layout.c:808:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode xmode; // [rsp+30h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/layout_decl/src/stor-layout.c:809:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code; // [rsp+34h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/layout_decl/src/stor-layout.c:876:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)HIBYTE( WORD2( type->block.abstract_origin)) >> 1] == MODE_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/layout_decl/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/layout_decl/src/obj/stor-layout.o] Error 1
